--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -41,7 +41,7 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 [**Remix v2**](https://remix.run/blog/remix-v2)
 
-Comme prévu, Remix v2 devrait être une upgrade relativement simple puisque de nombreuses features v2 étaient déjà accessibles en option avec la v1 sous forme de "future flags". Cet article donne un aperçu de l'ensemble des feature flags qui ont été livrés en v1 et qui sont activés par défaut en v2. Remix propose aussi des packages de retro-compatibilité pou ceux qui préféraient les conventions v1. Le support React Server Component devrait arriver avec Remix v3.
+Comme prévu, Remix v2 devrait être une upgrade relativement simple puisque de nombreuses features v2 étaient déjà accessibles en option avec la v1 sous forme de "future flags". Cet article donne un aperçu de l'ensemble des flags qui ont été livrés en v1 et qui sont maintenant activés par défaut en v2. Remix propose aussi des packages de retro-compatibilité pou ceux qui préféraient les conventions v1. Le support React Server Component devrait arriver avec Remix v3.
 
 https://twitter.com/remix_run/status/1702749787102085593
 
@@ -51,7 +51,7 @@ https://twitter.com/remix_run/status/1702749787102085593
 
 [**Next.js 13.5**](https://nextjs.org/blog/next-13-5)
 
-Beaucoup de devs se sont plaint des lenteurs du dev server Next.js dernièrement. Vercel nous a entendus, et propose une release qui améliore nettement les choses.
+Beaucoup de devs se sont plaints des lenteurs du dev server Next.js dernièrement. Vercel nous a entendus, et propose une release qui améliore nettement les choses.
 
 https://twitter.com/vercel/status/1704190634091786441
 
@@ -66,7 +66,7 @@ https://twitter.com/vercel/status/1704190634091786441
 - 📜 [The State of Web Frameworks on Deno](https://deno.com/blog/web-frameworks-on-deno): donne un bon aperçu des frameworks React qui peuvent être hébergés sur Deno Deploy. Le support Next.js est limité, mais Remix et Astro semblent bien supportés. Je découvre qu'ils ont migré leur doc vers Docusaurus 🥲.
 - 📜 [Abort Async Calls Inside Remix Loaders and Actions](https://sergiodxa.com/tutorials/abort-async-calls-inside-remix-loaders-and-actions): explique comment gérer correctement le AbortSignal reçu dans un loader Remix. Il y a quelques pièges à éviter.
 - 📜 [Build a server-side filter UI with Remix](https://www.jacobparis.com/content/remix-filter-bar): propose une solution complète et belle démo pour créer des filtres avancés inspirés de l'app Linear. Je découvre la spec OData qui définit comment sérialiser les filtres en query string.
-- 📜 [Storing React state in the URL with Next.js](https://francoisbest.com/posts/2023/storing-react-state-in-the-url-with-nextjs): article qui encourage à utiliser la query string via un package next-usequerystate. La v1.8 vient de sortir et supporte Next.js App Router. Partage aussi quelques détails que j'ignorais, comme le rate-limit sur les appels `replaceState`.
+- 📜 [Storing React state in the URL with Next.js](https://francoisbest.com/posts/2023/storing-react-state-in-the-url-with-nextjs): encourage à utiliser la query string via un package next-usequerystate. La v1.8 vient de sortir et supporte Next.js App Router. Partage aussi quelques détails que j'ignorais, comme le rate-limit sur les appels `replaceState`.
 - 📜 [Displaying Local Times in Next.js](https://francoisbest.com/posts/2023/displaying-local-times-in-nextjs): astuces pour éviter les problèmes de hydration mismatch.
 - 📜 [Islands & Server Components & Resumability, Oh My!](https://dev.to/this-is-learning/islands-server-components-resumability-oh-my-319d): les 3 approches sont orthogonales et pourraient converger?
 - 📜 [A First Look at HTMX and How it Compares to React](https://www.builder.io/blog/htmx-vs-react)
