--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -43,8 +43,6 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 Comme prévu, Remix v2 devrait être une upgrade relativement simple puisque de nombreuses features v2 étaient déjà accessibles en option avec la v1 sous forme de "future flags". Cet article donne un aperçu de l'ensemble des flags qui ont été livrés en v1 et qui sont maintenant activés par défaut en v2. Remix propose aussi des packages de retro-compatibilité pou ceux qui préféraient les conventions v1. Le support React Server Component devrait arriver avec Remix v3.
 
-https://twitter.com/remix_run/status/1702749787102085593
-
 ---
 
 [![Next.js 13.5](/emails/issues/160/next-13.5.jpg)](https://remix.run/blog/remix-v2)
@@ -52,8 +50,6 @@ https://twitter.com/remix_run/status/1702749787102085593
 [**Next.js 13.5**](https://nextjs.org/blog/next-13-5)
 
 Beaucoup de devs se sont plaints des lenteurs du dev server Next.js dernièrement. Vercel nous a entendus, et propose une release qui améliore nettement les choses.
-
-https://twitter.com/vercel/status/1704190634091786441
 
 ---
 
@@ -73,14 +69,14 @@ https://twitter.com/vercel/status/1704190634091786441
 - 📜 [React Server Components Made Our Site Faster](https://frigade.com/blog/bundle-size-reduction-with-rsc-and-frigade)
 - 📜 [Building Low Level Components the Radix Way](https://alexkondov.com/building-low-level-components-the-radix-way/)
 - 📜 [Exploring React Server Components and Server Actions with Next.js](https://www.antstack.com/blog/exploring-react-server-components-and-server-actions-with-next-js/)
-- 📦 [Ladle v3 - Uber seamless alternative to Storybook - SWC, Node 18, MDX stories...](https://ladle.dev/blog/ladle-v3/) https://twitter.com/vmiksu/status/1704154849724506410
+- 📦 [Ladle v3 - Uber seamless alternative to Storybook - SWC, Node 18, MDX stories...](https://ladle.dev/blog/ladle-v3/)
 - 📦 [Docusaurus v3 beta - MDX 2, React 18, TypeScript 5, Mermaid 10](https://github.com/facebook/docusaurus/discussions/9312)
-- 📦 [TanStack Query v5 RC.1 - Last call to report bugs](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.1) + https://twitter.com/TkDodo/status/1706230945567646206
+- 📦 [TanStack Query v5 RC.1 - Last call to report bugs](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.1)
 - 📦 [Million v2.6 - HMR fixes, Million CLI, better pre-evaluation](https://github.com/aidenybai/million/releases/tag/v2.6.0)
 - 📦 [Mantine v7.0 - Fully featured React components library - Native CSS, App Router support](https://mantine.dev/changelog/7-0-0/)
 - 📦 [MDX Editor v1.0 - A rich text editor React component for markdown](https://github.com/mdx-editor/editor)
 - 📦 [Sonner v1.0 - An opinionated toast component for React - RSC support](https://sonner.emilkowal.ski/)
-- 📦 [Remix DevTools v3 - Remix v2 support, ESM, new dev server](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.0.0) + https://twitter.com/AlemTuzlak59192/status/1705619299673502178
+- 📦 [Remix DevTools v3 - Remix v2 support, ESM, new dev server](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v3.0.0)
 - 🎥 [Theo - React Wasn't Built For The Web](https://www.youtube.com/watch?v=Y12sGu8-qFE&t=2s)
 - 🎥 [Jack Herrington & Ben Holmes - Future Astro and React Advanced!](https://www.youtube.com/watch?v=sbiuZj2s5fs)
 - 🎥 [Lee Robinson - Using Forms in Next.js (Server Actions, Revalidating Data)](https://www.youtube.com/watch?v=dDpZfOQBMaU)
@@ -118,8 +114,6 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 Nouvelle que j'attendais avec impatience! Expo se lance dans les features coté server en proposant de déployer des API Routes via une convention Expo Router. Vous pouvez déployer ces routes vous-même, mais on se doute bien qu'à terme le but est de proposer un hébergement sur EAS.
 
 C'est le début d'une nouvelle ère pour Expo. Après avoir résolu le problème du mobile natif, il est maintenant temps de faire du cross-platform une réalité mainstream en comblant les lacunes du support web avec un support Server Side Rendering et React Server Components.
-
-https://twitter.com/Baconbrix/status/1702026267384758657
 
 ---
 
