--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/160/index.mdx
@@ -45,7 +45,7 @@ Comme prévu, Remix v2 devrait être une upgrade relativement simple puisque de 
 
 ---
 
-[![Next.js 13.5](/emails/issues/160/next-13.5.jpg)](https://remix.run/blog/remix-v2)
+[![Next.js 13.5](/emails/issues/160/next-13.5.jpg)](https://nextjs.org/blog/next-13-5)
 
 [**Next.js 13.5**](https://nextjs.org/blog/next-13-5)
 
