--- a/website/newsletter/160/index.mdx
+++ b/website/newsletter/160/index.mdx
@@ -45,7 +45,7 @@ As expected, Remix v2 should be a relatively straightforward upgrade, since many
 
 ---
 
-[![Next.js 13.5](/emails/issues/160/next-13.5.jpg)](https://remix.run/blog/remix-v2)
+[![Next.js 13.5](/emails/issues/160/next-13.5.jpg)](https://nextjs.org/blog/next-13-5)
 
 [**Next.js 13.5**](https://nextjs.org/blog/next-13-5)
 
