--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -55,9 +55,9 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 **[A Non-Cloud Alternative to Google Forms that has it all](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=email)**
 
-If you are looking to set up a robust form management system fully integrated in your IT infrastructure that allows you to retain full control over the data flow, and you don’t want to spend months and thousands of dollars to get it up and running, then SurveyJS is the way to go!
+If you are looking to set up **a robust form management system fully integrated in your IT infrastructure** that allows you to **retain full control over the data flow**, and you don’t want to spend months and thousands of dollars to get it up and running, then SurveyJS is the way to go!
 
-SurveyJS is a product suite of four open-source JavaScript libraries that allow you to create and edit multiple dynamic JSON-based forms in a drag-and-drop form builder, render them in your React app and store sensitive survey data within your in-house infrastructure. You can then render your custom surveys and forms as editable PDF files in a browser and visualize survey results with interactive charts and tables. [Learn more now](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=email).
+SurveyJS is a product suite of four open-source JavaScript libraries that allow you to **create and edit** multiple dynamic **JSON-based forms** in a drag-and-drop form builder, render them in your React app and **store sensitive survey data within your in-house infrastructure**. You can then **render your custom surveys and forms as editable PDF files** in a browser and visualize survey results with **interactive charts and tables**. [Learn more now](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=email).
 
 ---
 
@@ -79,9 +79,11 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 💸 **[🚀 Formation React approfondie et 100% FR (pré-vente) !](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-27092023)**
 
-Découvrez "À l'abordage de React" en pré-vente à seulement 480 €, avec les deux premiers modules et un **accès à vie** aux autres modules lorsqu'ils sortiront.
+Découvrez "À l'abordage de React" en pré-vente, avec un accès direct aux deux premiers modules et un **accès à vie** aux autres modules lorsqu'ils sortiront.
 
 Notre plateforme **interactive** et **immersive** permet un apprentissage efficace et en profondeur de React en Français.
+
+Offre valable 3 semaines
 
 ---
 
