--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -41,9 +41,16 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-<Todo />
-
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
+- [Panda CSS Public Roadmap](https://panda-css.canny.io/)
+
+- [Radix Themes 2.0](https://www.radix-ui.com/themes/docs/overview/releases#200) https://twitter.com/radix_ui/status/1708911620498362394
+- [React Aria - October 2 2023 releases](https://react-spectrum.adobe.com/releases/2023-10-02.html) https://twitter.com/devongovett/status/1708878791446339669
+- [Theo T3 - Facebook Tried Tailwind, Then Built This Instead (styleX)](https://www.youtube.com/watch?v=PHV94q7BivI)
+- [The Uphill Battle of Memoization](https://tkdodo.eu/blog/the-uphill-battle-of-memoization) https://twitter.com/TkDodo/status/1708134790065434770
+- Astro transition 3D: https://twitter.com/astrodotbuild/status/1707918024471355406
+- Astro 3.2 https://twitter.com/astrodotbuild/status/1707479422381523401
+- https://twitter.com/Remotion/status/1707664519403614323
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -64,6 +71,16 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 ## 📱 React-Native {#react-native}
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+- [Why did your app crash? How to use Logcat & macOS Console to debug](https://www.youtube.com/watch?v=LvCci4Bwmpc)
+- [create-react-native-library v0.34 - add ability to generate a local library](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.34.0) https://twitter.com/satya164/status/1708769857309720652
+- Expo XCode 15 https://twitter.com/expo/status/1707860316661653987
+- RNR 276 https://twitter.com/ReactNativeRdio/status/1707857735034024020
+- Visionpro https://twitter.com/o_kwasniewski/status/1707771681941438964
+- rn optimize: https://twitter.com/FernandoTheRojo/status/1707762822015267219
+- expo image security fix https://twitter.com/expo/status/1707468429798867149
+- skia https://twitter.com/wcandillon/status/1707406259505315894
+- expo router https://twitter.com/Baconbrix/status/1707271103360503955
+- expo cng ? https://twitter.com/expo/status/1707158425195409789
 
 <Todo />
 
@@ -89,13 +106,35 @@ Offre valable 3 semaines
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [string-ts - Strongly typed string functions](https://github.com/gustavoguichard/string-ts)
+- [every-ts - A utility to build and bisect any version of TypeScript](https://github.com/jakebailey/every-ts)
+- [pattycake - Zero-runtime pattern matching - Optimizing compiler for ts-pattern](https://github.com/aidenybai/pattycake)
+- [Vitest 1.0 beta](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0-beta.0)
+- [The Absolute Minimum Every Software Developer Must Know About Unicode in 2023](https://tonsky.me/blog/unicode/)
+- photoshop on the web https://twitter.com/addyosmani/status/1707811109233897587
+- Netlify SWR ? https://twitter.com/biilmann/status/1707522456553246732
+- css subgrid cross-supported chrome 117 https://twitter.com/Una/status/1707462136052531276
+- [CSS Nesting and the Cascade](https://webkit.org/blog/14571/css-nesting-and-the-cascade/) https://twitter.com/jensimmons/status/1707444282963943918
+- Node 20.8 https://twitter.com/yagiznizipli/status/1707426424997458241
+- tc39 https://twitter.com/robpalmer2/status/1707231077226643878
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/iammemeloper/status/1708394568360833408
+
+https://twitter.com/trashh_dev/status/1707765999691509930
+
+https://twitter.com/_jessicasachs/status/1707877806636736624
+
+https://twitter.com/sebastienlorber/status/1707642865214480567
+
+https://twitter.com/leeerob/status/1707443239630835805
+
+https://twitter.com/Rich_Harris/status/1707213689261039756
+
+https://twitter.com/creatine_cycle/status/1706912311309652159
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
