--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -8,6 +8,8 @@ unlisted: true
 
 Salut à tous !
 
+ViteConf demain
+
 <Todo />
 
 <!-- truncate -->
@@ -41,16 +43,29 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-- 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
-- [Panda CSS Public Roadmap](https://panda-css.canny.io/)
+[Accessible, Typesafe, Progressively Enhanced Modern Web Forms](https://www.epicweb.dev/accessible-typesafe-progressively-enhanced-modern-web-forms)
 
-- [Radix Themes 2.0](https://www.radix-ui.com/themes/docs/overview/releases#200) https://twitter.com/radix_ui/status/1708911620498362394
-- [React Aria - October 2 2023 releases](https://react-spectrum.adobe.com/releases/2023-10-02.html) https://twitter.com/devongovett/status/1708878791446339669
-- [Theo T3 - Facebook Tried Tailwind, Then Built This Instead (styleX)](https://www.youtube.com/watch?v=PHV94q7BivI)
-- [The Uphill Battle of Memoization](https://tkdodo.eu/blog/the-uphill-battle-of-memoization) https://twitter.com/TkDodo/status/1708134790065434770
-- Astro transition 3D: https://twitter.com/astrodotbuild/status/1707918024471355406
-- Astro 3.2 https://twitter.com/astrodotbuild/status/1707479422381523401
-- https://twitter.com/Remotion/status/1707664519403614323
+---
+
+- 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
+- next progressive enhancement for form state: https://twitter.com/shuding_/status/1707191832625455219
+- createServerContext: https://twitter.com/jamannnnnn/status/1708868327764861351 https://github.com/facebook/react/pull/27424
+- 👀 [Panda CSS Public Roadmap](https://panda-css.canny.io/)
+- 🐦 [Astro View Transition + persistent React-Three-Fiber model demo](https://twitter.com/astrodotbuild/status/1707918024471355406)
+- 🐦 [Remotion contracting with GitHub - Assembled a full team to produce GitHub Unwrapped 2023 videos](https://twitter.com/Remotion/status/1707664519403614323)
+- 📜 [Sharing State with Islands Architecture](https://frontendatscale.com/blog/islands-architecture-state/)
+- 📜 [The Uphill Battle of Memoization](https://tkdodo.eu/blog/the-uphill-battle-of-memoization) https://twitter.com/TkDodo/status/1708134790065434770
+- 📜 [Preact - Signal Boosting](https://preactjs.com/blog/signal-boosting/)
+- 📜 [React Google Maps: Drawing Tools](https://sudolabs.com/insights/react-google-maps-drawing-tools)
+- 📜 [Next.js 13 vs Remix: An In-depth case study](https://prateeksurana.me/blog/nextjs-13-vs-remix-an-in-depth-case-study/)
+- 📜 [Preparing your site for Docusaurus v3](https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3)
+- 📦 [Astro 3.2 - View Transitions improvements](https://astro.build/blog/astro-320/)
+- 📦 [Radix Themes 2.0](https://www.radix-ui.com/themes/docs/overview/releases#200) https://twitter.com/radix_ui/status/1708911620498362394 https://twitter.com/samselikoff/status/1709257127489921430
+- 📦 [React Aria - October 2 2023 releases](https://react-spectrum.adobe.com/releases/2023-10-02.html) https://twitter.com/devongovett/status/1708878791446339669
+- 📦 [Rustymotion - A Rust-based renderer for Remotion videos](https://github.com/clearlysid/rustymotion)
+- 📦 [Ecctrl - React-Three-Fiber character controller](https://github.com/pmndrs/ecctrl) https://twitter.com/AndrewChenE/status/1709000257747739046
+- 🎥 [Theo T3 - Facebook Tried Tailwind, Then Built This Instead (styleX)](https://www.youtube.com/watch?v=PHV94q7BivI)
+- 🎙️ [This Month in React – September 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--September-2023-e29vb6o)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -71,16 +86,20 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 ## 📱 React-Native {#react-native}
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
-- [Why did your app crash? How to use Logcat & macOS Console to debug](https://www.youtube.com/watch?v=LvCci4Bwmpc)
-- [create-react-native-library v0.34 - add ability to generate a local library](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.34.0) https://twitter.com/satya164/status/1708769857309720652
-- Expo XCode 15 https://twitter.com/expo/status/1707860316661653987
-- RNR 276 https://twitter.com/ReactNativeRdio/status/1707857735034024020
+- 📜 [Expo - XCode 15 and iOS 17](https://expo.dev/changelog/2023/09-28-new-xcode-ios) https://twitter.com/expo/status/1707860316661653987
+- 📜 [Custom Apple Settings UI with Expo](https://evanbacon.dev/blog/apple-settings)
+- 🎙️[React Native Radio 276 - Announcing Ignite v9](https://reactnativeradio.com/episodes/rnr-276-announcing-ignite-v9-expresso)
 - Visionpro https://twitter.com/o_kwasniewski/status/1707771681941438964
 - rn optimize: https://twitter.com/FernandoTheRojo/status/1707762822015267219
-- expo image security fix https://twitter.com/expo/status/1707468429798867149
-- skia https://twitter.com/wcandillon/status/1707406259505315894
 - expo router https://twitter.com/Baconbrix/status/1707271103360503955
 - expo cng ? https://twitter.com/expo/status/1707158425195409789
+- 📦 [create-react-native-library v0.34 - add ability to generate a local library](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.34.0) https://twitter.com/satya164/status/1708769857309720652
+- 📦 [Expo-Image 1.3.4 - Fix libwepb security issue](https://expo.dev/changelog/2023/09-29-libwebp) expo image security fix https://twitter.com/expo/status/1707468429798867149
+- 📦 [React-Native-Skia v0.1.211 beta - Animated images](https://shopify.github.io/react-native-skia/docs/animated-images/) skia https://twitter.com/wcandillon/status/1707406259505315894
+- 📦 [react-native-unistyles - Level up your React Native StyleSheet, make it cross-platform and scalable](https://github.com/jpudysz/react-native-unistyles)
+- 📦 [react-native-compressor - Compress Image, Video, and Audio before uploading](https://github.com/numandev1/react-native-compressor)
+- 🎥 [Why Airbnb was wrong to ditch React Native in 2018](https://www.youtube.com/watch?v=RwUQnfcxH0o) https://twitter.com/mo__javad/status/1707424514630390209
+- 🎥 [Why did your app crash? How to use Logcat & macOS Console to debug](https://www.youtube.com/watch?v=LvCci4Bwmpc)
 
 <Todo />
 
@@ -88,7 +107,7 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
+- 🎥 [Grafikart - Formation React 2023 en ligne](https://www.youtube.com/watch?v=hhe6Xb4Em5U)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -106,17 +125,17 @@ Offre valable 3 semaines
 
 ## 🔀 Autre {#other}
 
-- [string-ts - Strongly typed string functions](https://github.com/gustavoguichard/string-ts)
-- [every-ts - A utility to build and bisect any version of TypeScript](https://github.com/jakebailey/every-ts)
-- [pattycake - Zero-runtime pattern matching - Optimizing compiler for ts-pattern](https://github.com/aidenybai/pattycake)
-- [Vitest 1.0 beta](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0-beta.0)
-- [The Absolute Minimum Every Software Developer Must Know About Unicode in 2023](https://tonsky.me/blog/unicode/)
-- photoshop on the web https://twitter.com/addyosmani/status/1707811109233897587
-- Netlify SWR ? https://twitter.com/biilmann/status/1707522456553246732
-- css subgrid cross-supported chrome 117 https://twitter.com/Una/status/1707462136052531276
-- [CSS Nesting and the Cascade](https://webkit.org/blog/14571/css-nesting-and-the-cascade/) https://twitter.com/jensimmons/status/1707444282963943918
-- Node 20.8 https://twitter.com/yagiznizipli/status/1707426424997458241
-- tc39 https://twitter.com/robpalmer2/status/1707231077226643878
+- 📜 [New to the web platform in September](https://web.dev/web-platform-09-2023/)
+- 📜 [Updates from the 98th TC39 meeting - Resizable ArrayBuffer, ShadowRealm, RegEx escape...](https://dev.to/hemanth/updates-from-the-98th-tc39-meeting-1lcf)
+- 📜 [The Absolute Minimum Every Software Developer Must Know About Unicode in 2023](https://tonsky.me/blog/unicode/)
+- 📜 [CSS Subgrid - Now available in all browsers thanks to Chrome 117](https://web.dev/css-subgrid/)
+- 📜 [CSS Nesting and the Cascade](https://webkit.org/blog/14571/css-nesting-and-the-cascade/) https://twitter.com/jensimmons/status/1707444282963943918
+- 📦 [TypeScript 5.3 Beta - Import Attributes, "resolution-mode" for type imports](https://devblogs.microsoft.com/typescript/announcing-typescript-5-3-beta/) https://twitter.com/robpalmer2/status/1709272259444306317
+- 📦 [Node.js 20.8 - Notable performance improvements](https://nodejs.org/en/blog/release/v20.8.0)
+- 📦 [Vitest 1.0 beta](https://github.com/vitest-dev/vitest/releases/tag/v1.0.0-beta.0)
+- 📦 [string-ts - Strongly typed string functions](https://github.com/gustavoguichard/string-ts)
+- 📦 [every-ts - A utility to build and bisect any version of TypeScript](https://github.com/jakebailey/every-ts)
+- 📦 [pattycake - Zero-runtime pattern matching - Optimizing compiler for ts-pattern](https://github.com/aidenybai/pattycake)
 
 ---
 
