--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -100,6 +100,8 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 - 📦 [react-native-compressor - Compress Image, Video, and Audio before uploading](https://github.com/numandev1/react-native-compressor)
 - 🎥 [Why Airbnb was wrong to ditch React Native in 2018](https://www.youtube.com/watch?v=RwUQnfcxH0o) https://twitter.com/mo__javad/status/1707424514630390209
 - 🎥 [Why did your app crash? How to use Logcat & macOS Console to debug](https://www.youtube.com/watch?v=LvCci4Bwmpc)
+- 👥 [reactjsday](https://2023.reactjsday.it/) (Verone 🇮🇹, 27 Octobre) nous offre [\-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
+- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <Todo />
 
