--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -48,9 +48,9 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 ---
 
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
-- next progressive enhancement for form state: https://twitter.com/shuding_/status/1707191832625455219
-- createServerContext: https://twitter.com/jamannnnnn/status/1708868327764861351 https://github.com/facebook/react/pull/27424
-- 👀 [Panda CSS Public Roadmap](https://panda-css.canny.io/)
+- 👀 [React core PR - `createServerContext` undocumented API has been deprecated and going to be removed](https://github.com/facebook/react/pull/27424)
+- 👀 [Next.js PR - Progressive enhancement for form state](https://github.com/vercel/next.js/pull/55584): Next.js intègre un tout nouveau hook React `useFormState` (ne pas confondre avec `useFormStatus`) qui permet de gérer la réponse des Server Actions, même quand JavaScript est désactivé. https://twitter.com/shuding_/status/1707191832625455219
+- 👀 [Panda CSS Public Roadmap - Container Query, Panda Studio](https://panda-css.canny.io/)
 - 🐦 [Astro View Transition + persistent React-Three-Fiber model demo](https://twitter.com/astrodotbuild/status/1707918024471355406)
 - 🐦 [Remotion contracting with GitHub - Assembled a full team to produce GitHub Unwrapped 2023 videos](https://twitter.com/Remotion/status/1707664519403614323)
 - 📜 [Sharing State with Islands Architecture](https://frontendatscale.com/blog/islands-architecture-state/)
@@ -58,7 +58,7 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 - 📜 [Preact - Signal Boosting](https://preactjs.com/blog/signal-boosting/)
 - 📜 [React Google Maps: Drawing Tools](https://sudolabs.com/insights/react-google-maps-drawing-tools)
 - 📜 [Next.js 13 vs Remix: An In-depth case study](https://prateeksurana.me/blog/nextjs-13-vs-remix-an-in-depth-case-study/)
-- 📜 [Preparing your site for Docusaurus v3](https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3)
+- 📜 [Docusaurus - Preparing your site for v3 + MDX 2](https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3)
 - 📦 [Astro 3.2 - View Transitions improvements](https://astro.build/blog/astro-320/)
 - 📦 [Radix Themes 2.0](https://www.radix-ui.com/themes/docs/overview/releases#200) https://twitter.com/radix_ui/status/1708911620498362394 https://twitter.com/samselikoff/status/1709257127489921430
 - 📦 [React Aria - October 2 2023 releases](https://react-spectrum.adobe.com/releases/2023-10-02.html) https://twitter.com/devongovett/status/1708878791446339669
