--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -45,6 +45,8 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 [Accessible, Typesafe, Progressively Enhanced Modern Web Forms](https://www.epicweb.dev/accessible-typesafe-progressively-enhanced-modern-web-forms)
 
+Kent nous montre quelques exemples de code Remix et la facilité avec laquelle on implémente pending UI et optimistic UI. Il recommande d'utiliser un schema Zod partagé pour valider les formulaires coté frontend, et de l'étendre coté backend pour éventuellement rajouter des règles supplémentaires. [conform](https://conform.guide/) facilite l'utilisation d'un schema Zod pour valider un `FormData`, et semble être une solution très intéressante pour gérer un formulaire React, de l'état local jusqu'au serveur.
+
 ---
 
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
