--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -94,14 +94,14 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 ## 📱 React-Native {#react-native}
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+- 📜 [Custom Apple Settings UI with Expo](https://evanbacon.dev/blog/apple-settings): Evan rappelle les quelques avantages d'utiliser l'écran natif de settings iOS. C'est difficile à implémenter nativement, et le ROI est faible, mais son Expo Config Plugin simplifie la tâche. Il explique comment toggle le son d'une app ou encore automatiser l'affichage des licenses logicielles.
 - 📜 [Expo EAS - Support for XCode 15 and iOS 17](https://expo.dev/changelog/2023/09-28-new-xcode-ios) https://twitter.com/expo/status/1707860316661653987
-- 📜 [Custom Apple Settings UI with Expo](https://evanbacon.dev/blog/apple-settings)
 - 📖 [Expo Docs - Continuous Native Generation (CNG)](https://docs.expo.dev/workflow/continuous-native-generation/): présente l'idée de générer les plateformes natives en continu l'intérêt de cette pratique.
 - 📦 [create-react-native-library v0.34 - local library support](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.34.0): il est maintenant très facile de générer une librairie locale en React-Native vanilla. À noter qu'Expo le supporte aussi. https://twitter.com/satya164/status/1708769857309720652
-- 📦 [Expo-Image 1.3.4 - Fix libwepb security issue](https://expo.dev/changelog/2023/09-29-libwebp) expo image security fix https://twitter.com/expo/status/1707468429798867149
-- 📦 [React-Native-Skia v0.1.211 beta - Animated images](https://shopify.github.io/react-native-skia/docs/animated-images/) skia https://twitter.com/wcandillon/status/1707406259505315894
 - 📦 [react-native-unistyles - Level up your React Native StyleSheet, make it cross-platform and scalable](https://github.com/jpudysz/react-native-unistyles)
 - 📦 [react-native-compressor - Compress Image, Video, and Audio before uploading](https://github.com/numandev1/react-native-compressor)
+- 📦 [Expo-Image 1.3.4 - Fix libwepb security issue](https://expo.dev/changelog/2023/09-29-libwebp) expo image security fix https://twitter.com/expo/status/1707468429798867149
+- 📦 [React-Native-Skia v0.1.211 beta - Animated images](https://shopify.github.io/react-native-skia/docs/animated-images/)
 - 🎥 [Why did your app crash? How to use Logcat & macOS Console to debug](https://www.youtube.com/watch?v=LvCci4Bwmpc)
 - 🎥 [Why Airbnb was wrong to ditch React Native in 2018](https://www.youtube.com/watch?v=RwUQnfcxH0o) https://twitter.com/mo__javad/status/1707424514630390209
 - 🎙 [React Native Radio 276 - Announcing Ignite v9](https://reactnativeradio.com/episodes/rnr-276-announcing-ignite-v9-expresso)
@@ -146,22 +146,6 @@ Offre valable 3 semaines
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/iammemeloper/status/1708394568360833408
-
-https://twitter.com/trashh_dev/status/1707765999691509930
-
-https://twitter.com/_jessicasachs/status/1707877806636736624
-
-https://twitter.com/sebastienlorber/status/1707642865214480567
-
-https://twitter.com/leeerob/status/1707443239630835805
-
-https://twitter.com/Rich_Harris/status/1707213689261039756
-
-https://twitter.com/creatine_cycle/status/1706912311309652159
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![](/emails/issues/161/meme.jpg)](https://twitter.com/creatine_cycle/status/1706912311309652159)
 
 A plus 👋
