--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /161
-title: "React Hebdo #161: ..."
+title: "React Hebdo #161: useFormState, Memo, Conform, Progressive Enhancement, Astro, Radix, React-Aria, Rustymotion, Ecctrl, Expo Apple Settings, Unistyles, TypeScript, TC39..."
 authors: [slorber]
 date: 10-04-2023
 unlisted: true
@@ -8,9 +8,9 @@ unlisted: true
 
 Salut à tous !
 
-ViteConf demain
+Cette semaine j'ai trouvé l'écosystème React plutôt calme, mais on a quelques articles assez sympa à lire.
 
-<Todo />
+Le progressive enhancement est à l'honneur aussi bien coté Remix que Next.js!
 
 <!-- truncate -->
 
@@ -43,15 +43,23 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-[![EAccessible, Typesafe, Progressively Enhanced Modern Web Forms](/emails/issues/161/epicweb.jpg)](https://www.epicweb.dev/accessible-typesafe-progressively-enhanced-modern-web-forms)
+[![The Uphill Battle of Memoization](/emails/issues/161/memo.jpg)](https://tkdodo.eu/blog/the-uphill-battle-of-memoization)
+
+[**The Uphill Battle of Memoization**](https://tkdodo.eu/blog/the-uphill-battle-of-memoization)
+
+On veut créer des applications performantes, et pour cela on utilise `React.memo` qui évite les re-renders inutiles. Seulement ces optimisations cassent trop facilement. Dominik nous partage plusieurs cas de figure qui conduisent à une dégradation des performances, dont l'utilisation d'objects/callbacks inlinés, ou encore l'usage de slots JSX avec une props comme `children`.
+
+J'en ai profité pour donner [mon avis sur Twitter](https://twitter.com/sebastienlorber/status/1709258817844752794): la performance d'un composant React devrait être mieux encapsulée. En attendant le compiler React-Forget, il y a tout de même quelques pistes moins connues à explorer, comme l'usage de plugins Babel.
+
+https://twitter.com/TkDodo/status/1708134790065434770
+
+---
+
+[![Accessible, Typesafe, Progressively Enhanced Modern Web Forms](/emails/issues/161/epicweb.jpg)](https://www.epicweb.dev/accessible-typesafe-progressively-enhanced-modern-web-forms)
 
 [**Accessible, Typesafe, Progressively Enhanced Modern Web Forms**](https://www.epicweb.dev/accessible-typesafe-progressively-enhanced-modern-web-forms)
 
 Kent nous montre quelques exemples de code Remix et la facilité avec laquelle on implémente pending UI et optimistic UI. Il recommande d'utiliser un schema Zod partagé pour valider les formulaires coté frontend, et de l'étendre coté backend pour éventuellement rajouter des règles supplémentaires. [conform](https://conform.guide/) facilite l'utilisation d'un schema Zod pour valider un `FormData`, et semble être une solution très intéressante pour gérer un formulaire React, de l'état local jusqu'au serveur.
-
----
-
-- 📜 [The Uphill Battle of Memoization](https://tkdodo.eu/blog/the-uphill-battle-of-memoization) https://twitter.com/TkDodo/status/1708134790065434770
 
 ---
 
@@ -106,12 +114,11 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 - 🎥 [Why Airbnb was wrong to ditch React Native in 2018](https://www.youtube.com/watch?v=RwUQnfcxH0o) https://twitter.com/mo__javad/status/1707424514630390209
 - 🎙 [React Native Radio 276 - Announcing Ignite v9](https://reactnativeradio.com/episodes/rnr-276-announcing-ignite-v9-expresso)
 
-<Todo />
-
 ---
 
 ## 🇫🇷 En français {#fr}
 
+- 🎥 [Pourquoi React className et pas class ?](https://www.youtube.com/watch?v=eechS4YXYlk)
 - 🎥 [Grafikart - Formation React 2023 en ligne](https://www.youtube.com/watch?v=hhe6Xb4Em5U)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
@@ -130,12 +137,12 @@ Offre valable 3 semaines
 
 ## 🔀 Autre {#other}
 
-- 📜 [New to the web platform in September](https://web.dev/web-platform-09-2023/)
 - 📜 [Updates from the 98th TC39 meeting - Resizable ArrayBuffer, ShadowRealm, RegEx escape...](https://dev.to/hemanth/updates-from-the-98th-tc39-meeting-1lcf)
 - 📜 [The Absolute Minimum Every Software Developer Must Know About Unicode in 2023](https://tonsky.me/blog/unicode/)
 - 📜 [CSS Subgrid - Now available in all browsers thanks to Chrome 117](https://web.dev/css-subgrid/)
-- 📜 [CSS Nesting and the Cascade](https://webkit.org/blog/14571/css-nesting-and-the-cascade/) https://twitter.com/jensimmons/status/1707444282963943918
-- 📦 [TypeScript 5.3 Beta - Import Attributes, "resolution-mode" for type imports](https://devblogs.microsoft.com/typescript/announcing-typescript-5-3-beta/) https://twitter.com/robpalmer2/status/1709272259444306317
+- 📜 [CSS Nesting and the Cascade](https://webkit.org/blog/14571/css-nesting-and-the-cascade/)
+- 📜 [New to the web platform in September](https://web.dev/web-platform-09-2023/)
+- 📦 [TypeScript 5.3 Beta - Import Attributes, "resolution-mode" for type imports ...](https://devblogs.microsoft.com/typescript/announcing-typescript-5-3-beta/)
 - 📦 [string-ts - Strongly typed string functions](https://github.com/gustavoguichard/string-ts)
 - 📦 [every-ts - A utility to build and bisect any version of TypeScript](https://github.com/jakebailey/every-ts)
 - 📦 [pattycake - Zero-runtime pattern matching - Optimizing compiler for ts-pattern](https://github.com/aidenybai/pattycake)
@@ -146,6 +153,6 @@ Offre valable 3 semaines
 
 ## 🤭 Fun {#fun}
 
-[![](/emails/issues/161/meme.jpg)](https://twitter.com/creatine_cycle/status/1706912311309652159)
+[![alt](/emails/issues/161/meme.jpg)](https://twitter.com/creatine_cycle/status/1706912311309652159)
 
 A plus 👋
