--- a/website/newsletter/161/index.mdx
+++ b/website/newsletter/161/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /161
-title: "This Week In React #161: ..."
+title: "This Week In React #161: useFormState, Memo, Conform, Progressive Enhancement, Astro, Radix, React-Aria, Rustymotion, Ecctrl, Expo Apple Settings, Unistyles, TypeScript, TC39..."
 authors: [slorber]
 date: 10-04-2023
 unlisted: true
